RESOLVED FIXED85636
fix bit packing in FillLayer on Windows
https://bugs.webkit.org/show_bug.cgi?id=85636
Summary fix bit packing in FillLayer on Windows
Tony Chang
Reported 2012-05-04 10:12:14 PDT
fix bit packing in FillLayer on Windows
Attachments
Patch (5.00 KB, patch)
2012-05-04 10:15 PDT, Tony Chang
no flags
Patch for landing (5.00 KB, patch)
2012-05-04 10:42 PDT, Tony Chang
no flags
Tony Chang
Comment 1 2012-05-04 10:15:56 PDT
Tony Chang
Comment 2 2012-05-04 10:17:46 PDT
I saw this in a patch on bug 37514.
Ryosuke Niwa
Comment 3 2012-05-04 10:22:24 PDT
Comment on attachment 140262 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=140262&action=review > Source/WebCore/rendering/style/FillLayer.cpp:40 > +COMPILE_ASSERT(sizeof(FillLayer) == sizeof(SameSizeAsFillLayer), FillLayer_should_not_grow); I think we normally call these assertions FillLayer_should_stay_small. We should probably get rid of underscores at some point...
Tony Chang
Comment 4 2012-05-04 10:42:25 PDT
Created attachment 140270 [details] Patch for landing
WebKit Review Bot
Comment 5 2012-05-04 11:27:23 PDT
Comment on attachment 140270 [details] Patch for landing Clearing flags on attachment: 140270 Committed r116129: <http://trac.webkit.org/changeset/116129>
WebKit Review Bot
Comment 6 2012-05-04 11:27:27 PDT
All reviewed patches have been landed. Closing bug.
Darin Adler
Comment 7 2012-05-04 21:01:35 PDT
Where’s the COMPILE_ASSERT to catch us if we break this later?
Ryosuke Niwa
Comment 8 2012-05-04 22:06:22 PDT
(In reply to comment #7) > Where’s the COMPILE_ASSERT to catch us if we break this later? It's in FillLayer.cpp. See the line 40 on http://trac.webkit.org/changeset/116129/trunk/Source/WebCore/rendering/style/FillLayer.cpp
Darin Adler
Comment 9 2012-05-05 17:09:35 PDT
Ah, I see it now. Missed it the first time.
Note You need to log in before you can comment on or make changes to this bug.