fix bit packing in FillLayer on Windows https://bugs.webkit.org/show_bug.cgi?id=85636

Reviewed by Ryosuke Niwa.

Use unsigned for all bit packed types. I manually verified that
the current uses of these member variables always assign true or false.

No new tests, adding a compile assert to verify bit packing.

* rendering/style/FillLayer.cpp:
(SameSizeAsFillLayer): Added compile assert.
(WebCore):
(WebCore::FillLayer::FillLayer): Reorder m_sizeLength so bit packed fields are adjacent.
(WebCore::FillLayer::operator=): Ditto.
* rendering/style/FillLayer.h:
(FillLayer): Convert bools to unsigned to match other bit packed fields.


Canonical link: https://commits.webkit.org/103202@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@116129 268f45cc-cd09-0410-ab3c-d52691b4dbfc